# nextjs-fastapi-postgres-starter

backend/: crud.py  init_db.py  main.py  models.py  pyproject.toml  schema.py  seed.py
frontend/: package.json
frontend/app/: page.tsx
frontend/app/components/: Chat.tsx
