[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Vibha Narayan<vibha.narayan28@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.8"
fastapi = "*"
sqlalchemy = "*"
asyncpg = "*"
greenlet = "*"
psycopg2 = "*"
uvicorn = {extras = ["standard"], version = "^0.30.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
